<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/background_q">
    <ImageView
        android:id="@+id/exit_button"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/exit_button"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:layout_gravity="right"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">
        <ImageView
            android:id="@+id/gender_pre"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/arrow_left_q"
            android:layout_marginLeft="45dp"
            android:layout_alignParentLeft="true"/>
        <ImageView
            android:id="@+id/gender_next"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/arrow_right_q"
            android:layout_marginRight="45dp"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/occupation_text"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:layout_gravity="center_horizontal"
        android:textColor="#ffffff"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:paddingRight="45dp">
        <RelativeLayout
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:gravity="center"
            android:layout_marginRight="10dp"
            android:background="@drawable/start_circle">
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/not_high_education"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginLeft="25dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/education_not_high"
                android:textColor="#ffffff"/>
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingRight="150dp"
        android:layout_gravity="center_horizontal">
        <RelativeLayout
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:gravity="center"
            android:layout_marginRight="10dp"
            android:background="@drawable/start_circle">
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/high_education"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginLeft="25dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/education_high"
                android:textColor="#ffffff"/>
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:paddingRight="130dp"
        android:paddingLeft="10dp">
        <RelativeLayout
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:gravity="center"
            android:layout_marginRight="10dp"
            android:background="@drawable/start_circle">
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/bachelor_education"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginLeft="25dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/education_bachelor"
                android:textColor="#ffffff"/>
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:paddingRight="130dp">
        <RelativeLayout
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:gravity="center"
            android:layout_marginRight="10dp"
            android:background="@drawable/start_circle">
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/master_education"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginLeft="25dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/education_master"
                android:textColor="#ffffff"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
