<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/background_q">
    <ImageView
        android:id="@+id/exit_button"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/exit_button"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:layout_gravity="right"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">
        <ImageView
            android:id="@+id/gender_pre"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/arrow_left_q"
            android:layout_marginLeft="45dp"
            android:layout_alignParentLeft="true"/>
        <ImageView
            android:id="@+id/gender_next"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/arrow_right_q"
            android:layout_marginRight="45dp"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/familar_text"
            android:textSize="16sp"
            android:layout_gravity="center_horizontal"
            android:textColor="#ffffff"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:gravity="center_horizontal">
            <RelativeLayout
                android:id="@+id/questions_gender_male"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/start_circle"
                android:layout_marginRight="38dp"
                android:clickable="true"
                android:onClick="onAnswer">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    android:gravity="center"
                    android:textSize="11sp"
                    android:textColor="#ffffff"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/questions_gender_female"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/start_circle"
                android:layout_marginLeft="38dp"
                android:clickable="true"
                android:onClick="onAnswer">
                <TextView
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:gravity="center"
                    android:text="@string/no"
                    android:textSize="11sp"
                    android:textColor="#ffffff"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
