<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/background_q">
    <ImageView
        android:id="@+id/exit_button"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/exit_button"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:layout_gravity="right"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">
        <ImageView
            android:id="@+id/gender_pre"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/arrow_left_q"
            android:layout_marginLeft="45dp"
            android:layout_alignParentLeft="true"/>
        <ImageView
            android:id="@+id/gender_next"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/arrow_right_q"
            android:layout_marginRight="45dp"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/income_text"
            android:textSize="16sp"
            android:layout_gravity="center_horizontal"
            android:textColor="#ffffff"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_gravity="center_horizontal">
            <RelativeLayout
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:gravity="center"
                android:layout_marginRight="15dp"
                android:background="@drawable/start_circle">
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/income_10"
                    android:layout_marginLeft="5dp"
                    android:layout_marginBottom="7dp"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginLeft="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/income_10_thb"
                    android:textColor="#ffffff"/>
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_gravity="center_horizontal">
            <RelativeLayout
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:gravity="center"
                android:layout_marginRight="15dp"
                android:background="@drawable/start_circle">
                <ImageView
                    android:layout_width="19dp"
                    android:layout_height="19dp"
                    android:src="@drawable/income_20"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginLeft="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/income_20_thb"
                    android:textColor="#ffffff"/>
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_gravity="center_horizontal">
            <RelativeLayout
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:gravity="center"
                android:layout_marginRight="15dp"
                android:background="@drawable/start_circle">
                <ImageView
                    android:layout_width="19dp"
                    android:layout_height="19dp"
                    android:src="@drawable/income_40"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginLeft="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/income_40_thb"
                    android:textColor="#ffffff"/>
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:paddingRight="65dp">
            <RelativeLayout
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:gravity="center"
                android:layout_marginRight="15dp"
                android:background="@drawable/start_circle">
                <ImageView
                    android:layout_width="19dp"
                    android:layout_height="19dp"
                    android:src="@drawable/income_60"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginLeft="15dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/income_60_thb"
                    android:textColor="#ffffff"/>
            </RelativeLayout>
        </LinearLayout>
        <ImageView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/bullets_four"/>
    </LinearLayout>
</LinearLayout>
